correct iframe content

--- a/covid-calendar.html
+++ b/covid-calendar.html
@@ -23,5 +23,5 @@ height: 100% !important;
 
 
 <div class="responsive-iframe-container">
-<iframe src="https://calendar.google.com/calendar/embed?height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Australia%2FSydney&amp;src=ZTcxMjJmN3NyNjFjdGlkbzVyaGgxMzV0dWdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=djVuOXNqYjFvYmQ2c3JrbzRpc2RkOXVmbmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23795548&amp;color=%23009688&amp;showTabs=0&amp;showPrint=0" style="border:solid 1px #777" width="800" height="400" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://calendar.google.com/calendar/embed?height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Australia%2FSydney&amp&amp;src=djVuOXNqYjFvYmQ2c3JrbzRpc2RkOXVmbmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23795548&amp;color=%23009688&amp;showTabs=0&amp;showPrint=0" style="border:solid 1px #777" width="800" height="400" frameborder="0" scrolling="no"></iframe>
 </div>
